--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test:cypress": "node_modules/.bin/cypress open",
     "build": "rimraf build && webpack --config webpack.config.production.js --progress",
     "pre-commit": "lint-staged"
-
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
@@ -69,6 +68,7 @@
     "react-beautiful-dnd": "^12.2.0",
     "react-content-loader": "^4.3.3",
     "react-dom": "^16.12.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^5.1.2",
     "react-textarea-autosize": "^7.1.2",
     "react-transition-group": "^4.3.0",
